--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@react-google-maps/api": "^2.20.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
