--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@react-google-maps/api": "^2.20.6",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "hangul-js": "^0.2.6",
+    "lottie-colorify": "^0.8.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
